# cvAutoTrack.Core

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: artifacts.yml
include/: cvAutoTrack.Core.h
source/: CMakeLists.txt  global.convect.h  global.error.h
source/core/: CMakeLists.txt  core.impl.h  core.inface.cpp
source/frame/: CMakeLists.txt  frame.cpp  frame.include.h
source/frame/capture/: capture.bitblt.h  capture.direct3d_surface.h  capture.include.h  capture.print_window.h  capture.window_graphics.cpp  capture.window_graphics.h
source/frame/capture/utils/: utils.window_graphics.h
source/frame/local/: local.include.h  local.picture.h  local.video.h
source/genshin/: CMakeLists.txt  genshin.cpp  global.genshin.h
source/genshin/genshin_window/: debug.window.hpp  genshin.official.hpp
source/global/: CMakeLists.txt  global.genshin.h  global.resource.hpp
source/gui/: CMakeLists.txt  debugger.cpp  debugger.hpp  gui.cpp  gui.include.h
source/gui/comments/: image_inspect_pool.hpp
source/gui/imapp/: imapp.cpp  imapp.h
source/gui/imgui/: imconfig.h  imgui.cpp  imgui_internal.h
source/gui/imgui_third/imgui_flame_graph/: frame_graph.hpp  imgui_widget_flamegraph.cpp  imgui_widget_flamegraph.h
source/gui/imgui_third/imgui_notifier/: Notifier.cpp  Notifier.hpp
source/gui/imgui_third/imgui_tex_inspect/: image_to_texture.cpp  image_to_texture.hpp  imgui_tex_inspect.cpp  imgui_tex_inspect.h  imgui_tex_inspect_internal.h
source/handle/: CMakeLists.txt  handle.cpp  handle.include.h
source/handle/genshin_window/: genshin.official.hpp
source/handle/window_handle/: desktop.handle.hpp  foreground.handle.hpp
source/logger/: CMakeLists.txt  logger.cpp  logger.include.h
source/logger/record/: record.stdlog.h
tests/c/: CMakeLists.txt  main.c
tests/cpp/: CMakeLists.txt  main.cpp
tests/cpp-gui/: CMakeLists.txt  main.cpp
tests/csharp/: NativeStringConvert.cs  NativeTypeBinding.cs  Program.cs  csharp.csproj  csharp.sln
